# rust-trial

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  gcloud.yml  hoge.yml  job.yml  job2.yml
src/: main.rs
