[package]
name = "rust-trial"
version = "0.1.0"
edition = "2021"
description = "Rust trial"
repository = "https://github.com/sekiyelab/rust-trial"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "^1.0.152", features = ["derive"] }
serde_json = "^1.0.93"
futures = "*"
flate2 = "1.0"
csv = "1.2"
google_maps = "3.0"
rust_decimal = "1"
regex = "1"
