[package]
name = "rust-trial"
version = "0.1.0"
edition = "2021"
description = "Rust trial"
repository = "https://github.com/sekiyelab/rust-trial"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.109"
futures = "*"
flate2 = "1.0"
csv = "1.3"
google_maps = "3.4"
rust_decimal = "1"
regex = "1"
chrono = "0.4"